--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
   <br><p>皆さんこんにちは、プロスピA楽しんでますか？</br>
   <br>今回は自分自身が行っているヤクルト純正についてまとめたいと思います。</br>
   <br>2025年度の更新を時間があれば緩く更新していきたいと思います。</p></br>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter">https://x.com/ysaka33</span>Twitterはこちらから</a>
       </div>
     </div>
   </div>
