--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-    <h1>プロスピA　ヤクルト純正　リーグオーダーまとめ</h1>
+  <br><h1>プロスピA　</h1></br>
+  <br><h1>ヤクルト純正　リーグオーダーまとめ</h1><br>
   <br><p>皆さんこんにちは、プロスピA楽しんでますか？</br>
   <br>今回は自分自身が行っているヤクルト純正についてまとめたいと思います。</br>
   <br>2025年度の更新を時間があれば緩く更新していきたいと思います。</p></br>
