--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br>今回は自分自身が行っているヤクルト純正についてまとめたいと思います。</br>
   <br>2025年度の更新を時間があれば緩く更新していきたいと思います。</p></br>
       <div class="btn-wrapper">
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"><ul>https://x.com/ysaka33</ul>ul></span>Twitterはこちらから</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"><ul>https://x.com/ysaka33</ul></span>Twitterはこちらから</a>
       </div>
     </div>
   </div>
