--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ヤクルト純正</title>
+  <title><font size="7" color="#red">ヤクルト純正</font></title>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
