--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <br><h1><font size="7" color="#red">プロスピA</font>　</h1></br>
+  <br><h1><font size="7" color="red">プロスピA</font>　</h1></br>
   <br><h2>ヤクルト純正　リーグオーダーまとめ</h2><br>
   <br><p>皆さんこんにちは、プロスピA楽しんでますか？</br>
   <br>今回は自分自身が行っているヤクルト純正についてまとめたいと思います。</br>
