--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
         <span class="fa fa-twitter"></span>Twitterはこちらから
     </a>
 </div>
-
-    </div>
+</div>
+  <br><h2>ヤクルト純正　リーグオーダーまとめ</h2><br>
+  <br>現在組める最強のリーグオーダーはこれです</br>
+  //写真
+  <br>ちなみに私のリーグオーダーはこれです。seri1て抜かなきゃよかった、なんて思っています。</br>
+  <br><h2>更新ログ</h2><br>
+  <br>1月10日15:00更新<br>
+  
+  
+  
   
 </body>
 </html>
