--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <br>2025年度の更新を時間があれば緩く更新していきたいと思います。</p></br>
       <div class="btn-wrapper">
     <a href="https://x.com/ysaka33" class="btn twitter" target="_blank">
-        <span class="fa fa-twitter"></span>Twitterはこちらから
+        <span class="fa fa-twitter"></span>連絡はTwitterのリプやdmでお願いします。
     </a>
 </div>
 </div>
   <br><h2>ヤクルト純正　リーグオーダーまとめ</h2><br>
   <br>現在組める最強のリーグオーダーはこれです</br>
   //写真
-  <br>ちなみに私のリーグオーダーはこれです。seri1て抜かなきゃよかった、なんて思っています。</br>
+  <br>ちなみに私のリーグオーダーはこれです。seri1で抜かなきゃよかった、なんて思っています。</br>
   <br><h2>更新ログ</h2><br>
   <br>1月10日15:00更新<br>
   
