--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             <td>二塁手</td>
             <td>
                 <select name="example4">
-                    <option value="">山田哲人</option>
+                    <option value="">侍山田哲人</option>
+                    <option>山田哲人</option>
                     <option>赤羽由紘</option>
                     <option>武岡龍世</option>
                     <option>宮本丈</option>
@@ -185,7 +186,7 @@
             </td>
             <td><label for="name"></label>
 
-                <input type="text" value="4910" id="name" name="name" required minlength="4" maxlength="8" size="10" />
+                <input type="text" value="4810" id="name" name="name" required minlength="4" maxlength="8" size="10" />
             </td>
         </tr>
 
@@ -435,9 +436,9 @@
             <td>指名打者</td>
             <td>
                 <select name="example9">
-                    <option value="">丸山和耶</option>
+                    <option value="">サンタナ</option>
                     <option>赤羽由紘</option>
-                    <option>サンタナ</option>
+                    <option>丸山和耶</option>
                     <option>増田珠</option>
                     <option>宮本丈</option>
                     <option>内山壮真</option>
@@ -484,11 +485,24 @@
             <td>
                 <select name="example9">
                     <option value="">丸山和耶</option>
-                    <option>赤羽由紘</option>
-                    <option>サンタナ</option>
-                    <option>増田珠</option>
-                    <option>宮本丈</option>
+                    <option>中村悠平</option>
+                    <option>松本直樹</option>
                     <option>内山壮真</option>
+                    <option>オスナ</option>
+                    <option>侍川端慎吾</option>
+                    <option>川端慎吾</option>
+                    <option>侍山田哲人</option>
+                    <option>村上宗隆</option>
+                    <option>長岡秀樹</option>
+                    <option>池山隆寛</option>
+                    <option>サンタナ</option>
+                    <option>西川遥輝</option>
+                    <option>岩田幸宏</option>
+                    <option>宮本丈</option>
+                    <option>塩見泰隆</option>
+                    <option>茂木栄五郎</option>
+                    <option>増田珠</option>
+
                 </select>
             </td>
             <td>
@@ -531,11 +545,23 @@
             <td>
                 <select name="example9">
                     <option value="">丸山和耶</option>
-                    <option>赤羽由紘</option>
-                    <option>サンタナ</option>
-                    <option>増田珠</option>
-                    <option>宮本丈</option>
+                    <option>中村悠平</option>
+                    <option>松本直樹</option>
                     <option>内山壮真</option>
+                    <option>オスナ</option>
+                    <option>侍川端慎吾</option>
+                    <option>川端慎吾</option>
+                    <option>侍山田哲人</option>
+                    <option>村上宗隆</option>
+                    <option>長岡秀樹</option>
+                    <option>池山隆寛</option>
+                    <option>サンタナ</option>
+                    <option>西川遥輝</option>
+                    <option>岩田幸宏</option>
+                    <option>宮本丈</option>
+                    <option>塩見泰隆</option>
+                    <option>茂木栄五郎</option>
+                    <option>増田珠</option>
                 </select>
             </td>
             <td>
@@ -578,11 +604,23 @@
             <td>
                 <select name="example9">
                     <option value="">丸山和耶</option>
-                    <option>赤羽由紘</option>
-                    <option>サンタナ</option>
-                    <option>増田珠</option>
-                    <option>宮本丈</option>
+                    <option>中村悠平</option>
+                    <option>松本直樹</option>
                     <option>内山壮真</option>
+                    <option>オスナ</option>
+                    <option>侍川端慎吾</option>
+                    <option>川端慎吾</option>
+                    <option>侍山田哲人</option>
+                    <option>村上宗隆</option>
+                    <option>長岡秀樹</option>
+                    <option>池山隆寛</option>
+                    <option>サンタナ</option>
+                    <option>西川遥輝</option>
+                    <option>岩田幸宏</option>
+                    <option>宮本丈</option>
+                    <option>塩見泰隆</option>
+                    <option>茂木栄五郎</option>
+                    <option>増田珠</option>
                 </select>
             </td>
             <td>
@@ -625,11 +663,23 @@
             <td>
                 <select name="example9">
                     <option value="">丸山和耶</option>
-                    <option>赤羽由紘</option>
-                    <option>サンタナ</option>
-                    <option>増田珠</option>
-                    <option>宮本丈</option>
+                    <option>中村悠平</option>
+                    <option>松本直樹</option>
                     <option>内山壮真</option>
+                    <option>オスナ</option>
+                    <option>侍川端慎吾</option>
+                    <option>川端慎吾</option>
+                    <option>侍山田哲人</option>
+                    <option>村上宗隆</option>
+                    <option>長岡秀樹</option>
+                    <option>池山隆寛</option>
+                    <option>サンタナ</option>
+                    <option>西川遥輝</option>
+                    <option>岩田幸宏</option>
+                    <option>宮本丈</option>
+                    <option>塩見泰隆</option>
+                    <option>茂木栄五郎</option>
+                    <option>増田珠</option>
                 </select>
             </td>
             <td>
