--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>オーダーシュミレーター</title>
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
 
 
@@ -35,15 +35,15 @@
                 <td>
                     <select class="position">
                         <option value="">ポジションを選択</option>
-                        <option>捕</option>
-                        <option>一</option>
-                        <option>二</option>
-                        <option>三</option>
-                        <option>遊</option>
-                        <option>左</option>
-                        <option>中</option>
-                        <option>右</option>
-                        <option>指</option>
+                        <option>捕手</option>
+                        <option>一塁手</option>
+                        <option>二塁手</option>
+                        <option>三塁手</option>
+                        <option>遊撃手</option>
+                        <option>左翼手</option>
+                        <option>中堅手</option>
+                        <option>右翼手</option>
+                        <option>指名打者</option>
 
 
 
@@ -94,15 +94,15 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -152,15 +152,15 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -209,15 +209,72 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
+
+
+
+                </select>
+            </td>
+            <td>
+                <select class="player">
+                    <option value="">野手を選択</option>
+                    <option value="中村悠平">中村悠平(野手)</option>
+                    <option value="松本直樹">松本直樹(野手)</option>
+                    <option value="内山壮真">内山壮真(野手)</option>
+                    <option value="オスナ">オスナ(野手)</option>
+                    <option value="侍川端慎吾">侍川端慎吾(野手)</option>
+                    <option value="川端慎吾">川端慎吾(野手)</option>
+                    <option value="侍山田哲人">侍山田哲人(野手)</option>
+                    <option value="山田哲人">山田哲人(野手)</option>
+                    <option value="村上宗隆">村上宗隆(野手)</option>
+                    <option value="長岡秀樹">長岡秀樹(野手)</option>
+                    <option value="池山隆寛">池山隆寛(野手)</option>
+                    <option value="サンタナ">サンタナ(野手)</option>
+                    <option value="西川遥輝">西川遥輝(野手)</option>
+                    <option value="雄平">雄平(野手)</option>
+                    <option value="丸山和郁">丸山和郁(野手)</option>
+                    <option value="岩田幸宏">岩田幸宏(野手)</option>
+                    <option value="宮本丈">宮本丈(野手)</option>
+                    <option value="TS塩見泰隆">TS塩見泰隆(野手)</option>
+                    <option value="塩見泰隆">塩見泰隆(野手)</option>
+                    <option value="茂木栄五郎">茂木栄五郎(野手)</option>
+                    <option value="増田珠">増田珠(野手)</option>
+                    >
+                </select>
+            </td>
+            <td class="stat" data-base="0"></td>
+            <td class="stat" data-base="0"></td>
+            <td class="stat" data-base="0"></td>
+            <td>
+                <select class="title">
+                    <option value="0,0,0,0,0">なし</option>
+                </select>
+            </td>
+            <td class="spirits" data-base="0">0</td>
+        </tr>
+        </tbody>
+
+        <tr>
+            <td>
+                <select class="position">
+                    <option value="">ポジションを選択</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -267,15 +324,15 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -325,15 +382,72 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
+
+
+
+                </select>
+            </td>
+            <td>
+                <select class="player">
+                    <option value="">野手を選択</option>
+                    <option value="中村悠平">中村悠平(野手)</option>
+                    <option value="松本直樹">松本直樹(野手)</option>
+                    <option value="内山壮真">内山壮真(野手)</option>
+                    <option value="オスナ">オスナ(野手)</option>
+                    <option value="侍川端慎吾">侍川端慎吾(野手)</option>
+                    <option value="川端慎吾">川端慎吾(野手)</option>
+                    <option value="侍山田哲人">侍山田哲人(野手)</option>
+                    <option value="山田哲人">山田哲人(野手)</option>
+                    <option value="村上宗隆">村上宗隆(野手)</option>
+                    <option value="長岡秀樹">長岡秀樹(野手)</option>
+                    <option value="池山隆寛">池山隆寛(野手)</option>
+                    <option value="サンタナ">サンタナ(野手)</option>
+                    <option value="西川遥輝">西川遥輝(野手)</option>
+                    <option value="雄平">雄平(野手)</option>
+                    <option value="丸山和郁">丸山和郁(野手)</option>
+                    <option value="岩田幸宏">岩田幸宏(野手)</option>
+                    <option value="宮本丈">宮本丈(野手)</option>
+                    <option value="TS塩見泰隆">TS塩見泰隆(野手)</option>
+                    <option value="塩見泰隆">塩見泰隆(野手)</option>
+                    <option value="茂木栄五郎">茂木栄五郎(野手)</option>
+                    <option value="増田珠">増田珠(野手)</option>
+                    >
+                </select>
+            </td>
+            <td class="stat" data-base="0"></td>
+            <td class="stat" data-base="0"></td>
+            <td class="stat" data-base="0"></td>
+            <td>
+                <select class="title">
+                    <option value="0,0,0,0,0">なし</option>
+                </select>
+            </td>
+            <td class="spirits" data-base="0">0</td>
+        </tr>
+        </tbody>
+
+        <tr>
+            <td>
+                <select class="position">
+                    <option value="">ポジションを選択</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -383,131 +497,15 @@
             <td>
                 <select class="position">
                     <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
-
-
-
-
-                </select>
-            </td>
-            <td>
-                <select class="player">
-                    <option value="">野手を選択</option>
-                    <option value="中村悠平">中村悠平(野手)</option>
-                    <option value="松本直樹">松本直樹(野手)</option>
-                    <option value="内山壮真">内山壮真(野手)</option>
-                    <option value="オスナ">オスナ(野手)</option>
-                    <option value="侍川端慎吾">侍川端慎吾(野手)</option>
-                    <option value="川端慎吾">川端慎吾(野手)</option>
-                    <option value="侍山田哲人">侍山田哲人(野手)</option>
-                    <option value="山田哲人">山田哲人(野手)</option>
-                    <option value="村上宗隆">村上宗隆(野手)</option>
-                    <option value="長岡秀樹">長岡秀樹(野手)</option>
-                    <option value="池山隆寛">池山隆寛(野手)</option>
-                    <option value="サンタナ">サンタナ(野手)</option>
-                    <option value="西川遥輝">西川遥輝(野手)</option>
-                    <option value="雄平">雄平(野手)</option>
-                    <option value="丸山和郁">丸山和郁(野手)</option>
-                    <option value="岩田幸宏">岩田幸宏(野手)</option>
-                    <option value="宮本丈">宮本丈(野手)</option>
-                    <option value="TS塩見泰隆">TS塩見泰隆(野手)</option>
-                    <option value="塩見泰隆">塩見泰隆(野手)</option>
-                    <option value="茂木栄五郎">茂木栄五郎(野手)</option>
-                    <option value="増田珠">増田珠(野手)</option>
-                    >
-                </select>
-            </td>
-            <td class="stat" data-base="0"></td>
-            <td class="stat" data-base="0"></td>
-            <td class="stat" data-base="0"></td>
-            <td>
-                <select class="title">
-                    <option value="0,0,0,0,0">なし</option>
-                </select>
-            </td>
-            <td class="spirits" data-base="0">0</td>
-        </tr>
-        </tbody>
-
-        <tr>
-            <td>
-                <select class="position">
-                    <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
-
-
-
-
-                </select>
-            </td>
-            <td>
-                <select class="player">
-                    <option value="">野手を選択</option>
-                    <option value="中村悠平">中村悠平(野手)</option>
-                    <option value="松本直樹">松本直樹(野手)</option>
-                    <option value="内山壮真">内山壮真(野手)</option>
-                    <option value="オスナ">オスナ(野手)</option>
-                    <option value="侍川端慎吾">侍川端慎吾(野手)</option>
-                    <option value="川端慎吾">川端慎吾(野手)</option>
-                    <option value="侍山田哲人">侍山田哲人(野手)</option>
-                    <option value="山田哲人">山田哲人(野手)</option>
-                    <option value="村上宗隆">村上宗隆(野手)</option>
-                    <option value="長岡秀樹">長岡秀樹(野手)</option>
-                    <option value="池山隆寛">池山隆寛(野手)</option>
-                    <option value="サンタナ">サンタナ(野手)</option>
-                    <option value="西川遥輝">西川遥輝(野手)</option>
-                    <option value="雄平">雄平(野手)</option>
-                    <option value="丸山和郁">丸山和郁(野手)</option>
-                    <option value="岩田幸宏">岩田幸宏(野手)</option>
-                    <option value="宮本丈">宮本丈(野手)</option>
-                    <option value="TS塩見泰隆">TS塩見泰隆(野手)</option>
-                    <option value="塩見泰隆">塩見泰隆(野手)</option>
-                    <option value="茂木栄五郎">茂木栄五郎(野手)</option>
-                    <option value="増田珠">増田珠(野手)</option>
-                    >
-                </select>
-            </td>
-            <td class="stat" data-base="0"></td>
-            <td class="stat" data-base="0"></td>
-            <td class="stat" data-base="0"></td>
-            <td>
-                <select class="title">
-                    <option value="0,0,0,0,0">なし</option>
-                </select>
-            </td>
-            <td class="spirits" data-base="0">0</td>
-        </tr>
-        </tbody>
-
-        <tr>
-            <td>
-                <select class="position">
-                    <option value="">ポジションを選択</option>
-                    <option>捕</option>
-                    <option>一</option>
-                    <option>二</option>
-                    <option>三</option>
-                    <option>遊</option>
-                    <option>左</option>
-                    <option>中</option>
-                    <option>右</option>
-                    <option>指</option>
+                    <option>捕手</option>
+                    <option>一塁手</option>
+                    <option>二塁手</option>
+                    <option>三塁手</option>
+                    <option>遊撃手</option>
+                    <option>左翼手</option>
+                    <option>中堅手</option>
+                    <option>右翼手</option>
+                    <option>指名打者</option>
 
 
 
@@ -1509,6 +1507,70 @@
 
 
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const playerSelects = document.querySelectorAll(".player");
+            const positionSelects = document.querySelectorAll(".position");
+
+            function updateSelectableOptions() {
+                let selectedNames = new Set();
+                let selectedPositions = new Set();
+
+                // 選択されている選手の基本名を取得
+                playerSelects.forEach(select => {
+                    let value = select.value;
+                    if (value) {
+                        let baseName = value.replace(/^(侍|TS)/, ""); // 侍やTSのプレフィックスを除去
+                        selectedNames.add(baseName);
+                    }
+                });
+
+                // 選択されているポジションを取得
+                positionSelects.forEach(select => {
+                    let value = select.value;
+                    if (value) {
+                        selectedPositions.add(value);
+                    }
+                });
+
+                // 選手の選択肢を更新（同じ基本名を無効化）
+                playerSelects.forEach(select => {
+                    Array.from(select.options).forEach(option => {
+                        let baseName = option.value.replace(/^(侍|TS)/, "");
+                        if (selectedNames.has(baseName) && option.value !== select.value) {
+                            option.disabled = true;
+                        } else {
+                            option.disabled = false;
+                        }
+                    });
+                });
+
+                // ポジションの選択肢を更新（選ばれたポジションを無効化）
+                positionSelects.forEach(select => {
+                    Array.from(select.options).forEach(option => {
+                        if (selectedPositions.has(option.value) && option.value !== select.value && option.value !== "") {
+                            option.disabled = true;
+                        } else {
+                            option.disabled = false;
+                        }
+                    });
+                });
+            }
+
+            // 選手・ポジションが選択されたら更新処理を実行
+            playerSelects.forEach(select => {
+                select.addEventListener("change", updateSelectableOptions);
+            });
+
+            positionSelects.forEach(select => {
+                select.addEventListener("change", updateSelectableOptions);
+            });
+
+            // 初期化時にも実行
+            updateSelectableOptions();
+        });
+    </script>
+
 
 </body>
 
